// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tooltip render variant white 1`] = `
<DocumentFragment>
  <div
    aria-describedby="test"
    tabindex="0"
  >
    <button
      aria-describedby="test"
      type="button"
    >
      Test
    </button>
  </div>
  .cache-dp86v9 {
  border-radius: 4px;
  opacity: 0;
  font-size: 0.8rem;
  white-space: pre-wrap;
  overflow-wrap: break-word;
  line-height: 16px;
  padding: 8px;
  text-align: center;
  -webkit-transition: opacity 150ms ease-in-out,-webkit-transform 150ms ease-in-out;
  transition: opacity 150ms ease-in-out,transform 150ms ease-in-out;
  transform-origin: top center;
  -webkit-transform: translate3d(0, -4px, 0);
  -moz-transform: translate3d(0, -4px, 0);
  -ms-transform: translate3d(0, -4px, 0);
  transform: translate3d(0, -4px, 0);
  background-color: #fff;
  color: #4a4f62;
  fill: #fff;
  box-shadow: 0 2px 5px 5px rgba(246,246,248,0.3);
}

[data-enter] .cache-dp86v9 {
  opacity: 1;
  -webkit-transform: translate3d(0, 0, 0);
  -moz-transform: translate3d(0, 0, 0);
  -ms-transform: translate3d(0, 0, 0);
  transform: translate3d(0, 0, 0);
}

<div
    class="__reakit-portal"
  >
    <div
      hidden=""
      id="test"
      role="tooltip"
      style="display: none; position: fixed; left: 100%; top: 100%; pointer-events: none;"
    >
      <div
        class="ep3agpf0 cache-dp86v9"
      >
        <div
          style="font-size: 16px; width: 1em; height: 1em; pointer-events: none; top: 100%;"
        >
          <svg
            style="transform: rotateZ(180deg);"
            viewBox="0 0 30 30"
          >
            <path
              class="stroke"
              d="M23.7,27.1L17,19.9C16.5,19.3,15.8,19,15,19s-1.6,0.3-2.1,0.9l-6.6,7.2C5.3,28.1,3.4,29,2,29h26 C26.7,29,24.6,28.1,23.7,27.1z"
            />
            <path
              class="fill"
              d="M23,27.8c1.1,1.2,3.4,2.2,5,2.2h2H0h2c1.7,0,3.9-1,5-2.2l6.6-7.2c0.7-0.8,2-0.8,2.7,0L23,27.8L23,27.8z"
            />
          </svg>
        </div>
        test
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Tooltip renders when child has a disabled props 1`] = `
<DocumentFragment>
  <div
    aria-describedby="test"
    tabindex="0"
  >
    <button
      aria-describedby="test"
      disabled=""
      type="button"
    >
      Test
    </button>
  </div>
  .cache-10rby8x {
  border-radius: 4px;
  opacity: 0;
  font-size: 0.8rem;
  white-space: pre-wrap;
  overflow-wrap: break-word;
  line-height: 16px;
  padding: 8px;
  text-align: center;
  -webkit-transition: opacity 150ms ease-in-out,-webkit-transform 150ms ease-in-out;
  transition: opacity 150ms ease-in-out,transform 150ms ease-in-out;
  transform-origin: top center;
  -webkit-transform: translate3d(0, -4px, 0);
  -moz-transform: translate3d(0, -4px, 0);
  -ms-transform: translate3d(0, -4px, 0);
  transform: translate3d(0, -4px, 0);
  background-color: #000000;
  color: #fff;
  fill: #000000;
  box-shadow: 0 2px 5px 5px rgba(246,246,248,0.3);
}

[data-enter] .cache-10rby8x {
  opacity: 1;
  -webkit-transform: translate3d(0, 0, 0);
  -moz-transform: translate3d(0, 0, 0);
  -ms-transform: translate3d(0, 0, 0);
  transform: translate3d(0, 0, 0);
}

<div
    class="__reakit-portal"
  >
    <div
      id="test"
      role="tooltip"
      style="position: fixed; left: 100%; top: 100%; pointer-events: none;"
    >
      <div
        class="ep3agpf0 cache-10rby8x"
      >
        <div
          style="font-size: 16px; width: 1em; height: 1em; pointer-events: none; top: 100%;"
        >
          <svg
            style="transform: rotateZ(180deg);"
            viewBox="0 0 30 30"
          >
            <path
              class="stroke"
              d="M23.7,27.1L17,19.9C16.5,19.3,15.8,19,15,19s-1.6,0.3-2.1,0.9l-6.6,7.2C5.3,28.1,3.4,29,2,29h26 C26.7,29,24.6,28.1,23.7,27.1z"
            />
            <path
              class="fill"
              d="M23,27.8c1.1,1.2,3.4,2.2,5,2.2h2H0h2c1.7,0,3.9-1,5-2.2l6.6-7.2c0.7-0.8,2-0.8,2.7,0L23,27.8L23,27.8z"
            />
          </svg>
        </div>
        test
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Tooltip renders when child is a function 1`] = `
<DocumentFragment>
  <button
    aria-describedby="test"
    type="button"
  >
    Test
  </button>
  .cache-10rby8x {
  border-radius: 4px;
  opacity: 0;
  font-size: 0.8rem;
  white-space: pre-wrap;
  overflow-wrap: break-word;
  line-height: 16px;
  padding: 8px;
  text-align: center;
  -webkit-transition: opacity 150ms ease-in-out,-webkit-transform 150ms ease-in-out;
  transition: opacity 150ms ease-in-out,transform 150ms ease-in-out;
  transform-origin: top center;
  -webkit-transform: translate3d(0, -4px, 0);
  -moz-transform: translate3d(0, -4px, 0);
  -ms-transform: translate3d(0, -4px, 0);
  transform: translate3d(0, -4px, 0);
  background-color: #000000;
  color: #fff;
  fill: #000000;
  box-shadow: 0 2px 5px 5px rgba(246,246,248,0.3);
}

[data-enter] .cache-10rby8x {
  opacity: 1;
  -webkit-transform: translate3d(0, 0, 0);
  -moz-transform: translate3d(0, 0, 0);
  -ms-transform: translate3d(0, 0, 0);
  transform: translate3d(0, 0, 0);
}

<div
    class="__reakit-portal"
  >
    <div
      id="test"
      role="tooltip"
      style="position: fixed; left: 100%; top: 100%; pointer-events: none;"
    >
      <div
        class="ep3agpf0 cache-10rby8x"
      >
        <div
          style="font-size: 16px; width: 1em; height: 1em; pointer-events: none; top: 100%;"
        >
          <svg
            style="transform: rotateZ(180deg);"
            viewBox="0 0 30 30"
          >
            <path
              class="stroke"
              d="M23.7,27.1L17,19.9C16.5,19.3,15.8,19,15,19s-1.6,0.3-2.1,0.9l-6.6,7.2C5.3,28.1,3.4,29,2,29h26 C26.7,29,24.6,28.1,23.7,27.1z"
            />
            <path
              class="fill"
              d="M23,27.8c1.1,1.2,3.4,2.2,5,2.2h2H0h2c1.7,0,3.9-1,5-2.2l6.6-7.2c0.7-0.8,2-0.8,2.7,0L23,27.8L23,27.8z"
            />
          </svg>
        </div>
        test
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Tooltip renders when child is a string 1`] = `
<DocumentFragment>
  <div
    aria-describedby="test"
    tabindex="0"
  >
    Test
  </div>
  .cache-10rby8x {
  border-radius: 4px;
  opacity: 0;
  font-size: 0.8rem;
  white-space: pre-wrap;
  overflow-wrap: break-word;
  line-height: 16px;
  padding: 8px;
  text-align: center;
  -webkit-transition: opacity 150ms ease-in-out,-webkit-transform 150ms ease-in-out;
  transition: opacity 150ms ease-in-out,transform 150ms ease-in-out;
  transform-origin: top center;
  -webkit-transform: translate3d(0, -4px, 0);
  -moz-transform: translate3d(0, -4px, 0);
  -ms-transform: translate3d(0, -4px, 0);
  transform: translate3d(0, -4px, 0);
  background-color: #000000;
  color: #fff;
  fill: #000000;
  box-shadow: 0 2px 5px 5px rgba(246,246,248,0.3);
}

[data-enter] .cache-10rby8x {
  opacity: 1;
  -webkit-transform: translate3d(0, 0, 0);
  -moz-transform: translate3d(0, 0, 0);
  -ms-transform: translate3d(0, 0, 0);
  transform: translate3d(0, 0, 0);
}

<div
    class="__reakit-portal"
  >
    <div
      id="test"
      role="tooltip"
      style="position: fixed; left: 100%; top: 100%; pointer-events: none;"
    >
      <div
        class="ep3agpf0 cache-10rby8x"
      >
        <div
          style="font-size: 16px; width: 1em; height: 1em; pointer-events: none; top: 100%;"
        >
          <svg
            style="transform: rotateZ(180deg);"
            viewBox="0 0 30 30"
          >
            <path
              class="stroke"
              d="M23.7,27.1L17,19.9C16.5,19.3,15.8,19,15,19s-1.6,0.3-2.1,0.9l-6.6,7.2C5.3,28.1,3.4,29,2,29h26 C26.7,29,24.6,28.1,23.7,27.1z"
            />
            <path
              class="fill"
              d="M23,27.8c1.1,1.2,3.4,2.2,5,2.2h2H0h2c1.7,0,3.9-1,5-2.2l6.6-7.2c0.7-0.8,2-0.8,2.7,0L23,27.8L23,27.8z"
            />
          </svg>
        </div>
        test
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Tooltip renders when tooltip is just a pass through 1`] = `
<DocumentFragment>
  <button
    aria-describedby="test"
    type="button"
  >
    Test
  </button>
</DocumentFragment>
`;

exports[`Tooltip renders with visible=false 1`] = `
<DocumentFragment>
  <div
    aria-describedby="test"
    tabindex="0"
  >
    <button
      aria-describedby="test"
      type="button"
    >
      Test
    </button>
  </div>
  .cache-10rby8x {
  border-radius: 4px;
  opacity: 0;
  font-size: 0.8rem;
  white-space: pre-wrap;
  overflow-wrap: break-word;
  line-height: 16px;
  padding: 8px;
  text-align: center;
  -webkit-transition: opacity 150ms ease-in-out,-webkit-transform 150ms ease-in-out;
  transition: opacity 150ms ease-in-out,transform 150ms ease-in-out;
  transform-origin: top center;
  -webkit-transform: translate3d(0, -4px, 0);
  -moz-transform: translate3d(0, -4px, 0);
  -ms-transform: translate3d(0, -4px, 0);
  transform: translate3d(0, -4px, 0);
  background-color: #000000;
  color: #fff;
  fill: #000000;
  box-shadow: 0 2px 5px 5px rgba(246,246,248,0.3);
}

[data-enter] .cache-10rby8x {
  opacity: 1;
  -webkit-transform: translate3d(0, 0, 0);
  -moz-transform: translate3d(0, 0, 0);
  -ms-transform: translate3d(0, 0, 0);
  transform: translate3d(0, 0, 0);
}

<div
    class="__reakit-portal"
  >
    <div
      hidden=""
      id="test"
      role="tooltip"
      style="display: none; position: fixed; left: 100%; top: 100%; pointer-events: none;"
    >
      <div
        class="ep3agpf0 cache-10rby8x"
      >
        <div
          style="font-size: 16px; width: 1em; height: 1em; pointer-events: none; top: 100%;"
        >
          <svg
            style="transform: rotateZ(180deg);"
            viewBox="0 0 30 30"
          >
            <path
              class="stroke"
              d="M23.7,27.1L17,19.9C16.5,19.3,15.8,19,15,19s-1.6,0.3-2.1,0.9l-6.6,7.2C5.3,28.1,3.4,29,2,29h26 C26.7,29,24.6,28.1,23.7,27.1z"
            />
            <path
              class="fill"
              d="M23,27.8c1.1,1.2,3.4,2.2,5,2.2h2H0h2c1.7,0,3.9-1,5-2.2l6.6-7.2c0.7-0.8,2-0.8,2.7,0L23,27.8L23,27.8z"
            />
          </svg>
        </div>
        test
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Tooltip renders with visible=true 1`] = `
<DocumentFragment>
  <div
    aria-describedby="test"
    tabindex="0"
  >
    <button
      aria-describedby="test"
      type="button"
    >
      Test
    </button>
  </div>
  .cache-10rby8x {
  border-radius: 4px;
  opacity: 0;
  font-size: 0.8rem;
  white-space: pre-wrap;
  overflow-wrap: break-word;
  line-height: 16px;
  padding: 8px;
  text-align: center;
  -webkit-transition: opacity 150ms ease-in-out,-webkit-transform 150ms ease-in-out;
  transition: opacity 150ms ease-in-out,transform 150ms ease-in-out;
  transform-origin: top center;
  -webkit-transform: translate3d(0, -4px, 0);
  -moz-transform: translate3d(0, -4px, 0);
  -ms-transform: translate3d(0, -4px, 0);
  transform: translate3d(0, -4px, 0);
  background-color: #000000;
  color: #fff;
  fill: #000000;
  box-shadow: 0 2px 5px 5px rgba(246,246,248,0.3);
}

[data-enter] .cache-10rby8x {
  opacity: 1;
  -webkit-transform: translate3d(0, 0, 0);
  -moz-transform: translate3d(0, 0, 0);
  -ms-transform: translate3d(0, 0, 0);
  transform: translate3d(0, 0, 0);
}

<div
    class="__reakit-portal"
  >
    <div
      id="test"
      role="tooltip"
      style="position: fixed; left: 100%; top: 100%; pointer-events: none;"
    >
      <div
        class="ep3agpf0 cache-10rby8x"
      >
        <div
          style="font-size: 16px; width: 1em; height: 1em; pointer-events: none; top: 100%;"
        >
          <svg
            style="transform: rotateZ(180deg);"
            viewBox="0 0 30 30"
          >
            <path
              class="stroke"
              d="M23.7,27.1L17,19.9C16.5,19.3,15.8,19,15,19s-1.6,0.3-2.1,0.9l-6.6,7.2C5.3,28.1,3.4,29,2,29h26 C26.7,29,24.6,28.1,23.7,27.1z"
            />
            <path
              class="fill"
              d="M23,27.8c1.1,1.2,3.4,2.2,5,2.2h2H0h2c1.7,0,3.9-1,5-2.2l6.6-7.2c0.7-0.8,2-0.8,2.7,0L23,27.8L23,27.8z"
            />
          </svg>
        </div>
        test
      </div>
    </div>
  </div>
</DocumentFragment>
`;
